Fixed menu colours in dark mode and space between menu and dividers

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	padding-bottom:36px;
+	padding-bottom: 71px;
 }
 
 .menubutton1 {
@@ -40,8 +40,12 @@
 }
 
 hr {
-	border-color: black;
-	border-width: 0.5px;
+	/* border-color: black;
+	border-width: 0.2px; */
+	
+	border: none;
+	height: 1px;
+	background-color: black;
 }
 
 .blog {
@@ -73,17 +77,18 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
+	a { color: rgb(114, 202, 236); }
+	a:visited { color: rgb(166, 103, 182); }
 	.menubutton1 a, .menubutton2 a {
 		color: white;
+		border-color: white;
 	}
 	.menubutton1 a:hover, .menubutton2 a:hover {
 		border-color: white;
 		color: black;
 		background-color: white;
 	}
-	.blog     { color: white; }
-	hr        { color: black; }
-	body      { background: rgb(30, 30, 30); color: white; }
-	a         { color: rgb(114, 202, 236); }
-	a:visited { color: rgb(166, 103, 182); }
+	.blog { color: white; }
+	hr    { background-color: white; }
+	body  { background: rgb(30, 30, 30); color: white; }
 }
